src/test/resources/purescript_examples/manual/failing/OrphanTypeDecl.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('OrphanTypeDecl')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('fn')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Number')
                PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeConstructor)
                PureASTWrapperElement(Qualified)
                  PsiElement(proper name)('Boolean')
                  PsiElement(whitespace)('\n')
